# ganzua

./: .gitignore  CHANGELOG.md  README.md  book.toml  justfile  lychee.toml  pyproject.toml
.github/: dependabot.yml
.github/actions/setup/: action.yaml
.github/workflows/: release.yaml  test.yaml
corpus/: README.md  constraints-poetry-pyproject.toml  constraints-uv-pyproject.toml
corpus/minor-uv-project/: README.md
corpus/new-uv-project/: pylock.exported.toml
corpus/setuptools-dynamic-version/: pyproject.toml
corpus/sources-poetry/: pyproject.toml
corpus/sources-uv/: pylock.exported.toml
corpus/split/: README.md  old.pyproject.toml  pyproject.toml
docs/: README.md  SUMMARY.md  changelog.md  custom.css  file-formats.md  filters.md  installation.md  license.md  support.md  testing.md
docs/cli/: ganzua-constraints-bump.md  ganzua-constraints-inspect.md  ganzua-constraints-reset.md  ganzua-constraints.md  ganzua-diff.md  ganzua-help.md  ganzua-inspect.md  ganzua-schema.md  ganzua.md  index.md  schema.constraints-inspect.json  schema.diff.json  schema.inspect.json
scripts/: bump_version.py  install-tools.py  par.py  readme-usage.py
src/ganzua/: __init__.py  _clack.py  _cli_help.py  _cli_markup.py  _constraints.py  _diff.py  _doctest.py  _edit_requirement.py  _filters.py  _lockfile.py  _markdown.py  _markdown_from_json_schema.py  _package_source.py  _pyproject.py  _requirement.py  _toml.py  cli.py
src/lockinator/: __init__.py  _constraints.py  _diff.py  _lockfile.py  _pyproject.py  cli.py
tests/: helpers.py  resources.py  schema.constraints-inspect.json  schema.diff.json  schema.inspect.json  test_cli.py  test_constraints.py  test_diff.py  test_docs.py  test_edit_requirement.py  test_ganzua_constraints_bump.py  test_ganzua_constraints_inspect.py  test_ganzua_constraints_reset.py  test_ganzua_diff.py  test_ganzua_help.py  test_ganzua_inspect.py  test_lockfile.py  test_lockfile_sources.py  test_pyproject.py  test_readme.py  test_uv.py
tests/poetry-multiple-groups/: pyproject.toml
tests/setuptools-dynamic-version/: README.md
tests/sources-uv/: pyproject.toml
